--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/main/server.ts"
+    "dev": "nodemon -r tsconfig-paths/register src/main/server.ts"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^22.5.4",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-cron": "^3.0.3"
   }
 }
