--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint \"src/**/*.ts\"",
     "dev": "nodemon -r tsconfig-paths/register src/main/server.ts",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
@@ -11,16 +12,27 @@
     "migrate:create": "node-pg-migrate create"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/node-cron": "^3.0.11",
+    "@types/node-pg-migrate": "^2.3.1",
     "@types/pg": "^8.11.8",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "node-pg-migrate": "^7.6.1",
     "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0"
   },
   "dependencies": {
     "axios": "^1.7.7",
