--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "lint": "eslint \"src/**/*.ts\"",
     "dev": "nodemon -r tsconfig-paths/register src/main/server.ts",
+    "start": "node dist/src/main/server.js",
+    "build": "npx tsc",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
