--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "eslint \"src/**/*.ts\"",
     "dev": "nodemon -r tsconfig-paths/register src/main/server.ts",
-    "start": "node dist/src/main/server.js",
-    "build": "npx tsc",
+    "prepare": "npx ts-patch install -s",
+    "start": "node dist/main/server.js",
+    "build": "tsup src",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
     "migrate:redo": "node-pg-migrate redo",
@@ -33,9 +34,11 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "ts-patch": "^3.2.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.4.0"
+    "typescript-eslint": "^8.4.0",
+    "typescript-transform-paths": "^3.5.1"
   },
   "dependencies": {
     "axios": "^1.7.7",
