--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,14 +23,27 @@
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
-
+    "plugins":[
+      /* Transform paths in output .js files */
+      {
+         "transform":"typescript-transform-paths"
+      },
+      /* Transform paths in output .d.ts files */
+      {
+         "transform":"typescript-transform-paths",
+         "afterDeclarations": true
+      }
+   ],
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+    "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "*": ["*", "src/*", "migrations/*"],
+      "domain/*": ["src/domain/*"],
+      "infra/*": ["src/infra/*"],
+      "main/*": ["src/main/*"],
+      "presentation/*": ["src/presentation/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": ["@types", "./node_modules/@types"],                                  /* Specify multiple folders that act like './node_modules/@types'. */
