--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/shopify_daily_db"
 PORT="3003"
 APP_URL="http://localhost:3000"
+NODE_ENV="dev"
