--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"src/**/*.ts\"",
-    "dev": "nodemon -r tsconfig-paths/register src/main/server.ts",
+    "dev": "NODE_ENV=dev nodemon -r tsconfig-paths/register src/main/server.ts",
     "copy-files": "copyfiles -u 1 -f 'src/infra/utils/**/*.*' dist/infra/utils",
-    "start": "node dist/main/server.js",
+    "start": "NODE_ENV=prod node dist/main/server.js",
     "build": "tsup src && yarn copy-files",
     "migrate:up": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
